@@ -29,28 +29,9 @@
 #define BITFLP  0x15
 
 #define LENTOT  200L            /* This one is OK */
-#define TOKMAX  50L             /* Should be 50 but bust */
 #define POLMAX  30L             /* This one is OK */
-#define XERROR(CAUSE)   { strncpy(st.xprmsg,CAUSE,80);  goto error; }
+#define XERROR(CAUSE)   { strncpy(cenviron.xprmsg,CAUSE,80);  goto error; }
 
-typedef struct token {
-        char    *str;
-        short   prec;
-} TOKEN;
-
-static struct local_express {
-  long    polmax;
-  long    toklen;
-  TOKEN   *token;
-  TOKEN   *tokend;
-  int     acount, kcount, icount, Bcount, bcount;
-  char    xprmsg[80], *stringend;
-  TOKEN   **revp, **pushp, **argp, **endlist;
-} st;
-
-static  TOKEN   *tokens = NULL;
-static  TOKEN   **tokenlist = NULL;
-static  int     toklength = TOKMAX;
 static  const char    strminus1[] = "-1";
 static  const char    strmult[] = "*";
 static  void    putokens(void), putoklist(void);
@@ -65,23 +46,25 @@ extern  void    *mrealloc(void*, void*, size_t);
 void expRESET(void)
 {
     mfree(&cenviron, polish); polish=NULL;
-    st.polmax   = 0;
-    tokenstring = NULL;
-    st.toklen   = 0;
-    tokens      = st.token = st.tokend = NULL;
-    tokenlist   = st.revp = st.pushp = st.argp = st.endlist = NULL;
-    toklength   = TOKMAX;
+    cenviron.polmax    = 0;
+    tokenstring         = NULL;
+    cenviron.toklen    = 0;
+    cenviron.tokens    = cenviron.token = cenviron.tokend = NULL;
+    cenviron.tokenlist = cenviron.revp = cenviron.pushp =
+                          cenviron.argp = cenviron.endlist = NULL;
+    cenviron.toklength = TOKMAX;
     resetouts();
-    memset(st.xprmsg,0,80*sizeof(char));
-    st.stringend = 0;
-    argcnt_offs = 0;
-    opcode_is_assign = assign_type = 0;
-    assign_outarg = NULL;
+    memset(cenviron.xprmsg,0,80*sizeof(char));
+    cenviron.stringend = 0;
+    argcnt_offs         = 0;
+    opcode_is_assign    = assign_type = 0;
+    assign_outarg       = NULL;
 }
 
 void resetouts(void)
 {
-    st.acount = st.kcount = st.icount = st.Bcount = st.bcount = 0;
+    cenviron.acount = cenviron.kcount = cenviron.icount =
+                       cenviron.Bcount = cenviron.bcount = 0;
 }
 
 #define copystring(s) strsav_string(s)
@@ -95,31 +78,31 @@ int express(char *s)
 
     if (*s == '"')                 /* if quoted string, not an exprssion */
       return (0);
-    if (tokens == NULL) {
-      tokens       = (TOKEN*) mmalloc(&cenviron, (long)TOKMAX*sizeof(TOKEN));
-      st.tokend    = tokens+TOKMAX;
-      tokenlist    = (TOKEN**) mmalloc(&cenviron, (long)TOKMAX*sizeof(TOKEN*));
+    if (cenviron.tokens == NULL) {
+      cenviron.tokens       = (TOKEN*) mmalloc(&cenviron, (long)TOKMAX*sizeof(TOKEN));
+      cenviron.tokend    = cenviron.tokens+TOKMAX;
+      cenviron.tokenlist    = (TOKEN**) mmalloc(&cenviron, (long)TOKMAX*sizeof(TOKEN*));
       polish       = (POLISH*) mmalloc(&cenviron, (long)POLMAX*sizeof(POLISH));
-      st.polmax    = POLMAX;
+      cenviron.polmax    = POLMAX;
       tokenstring  = mmalloc(&cenviron, LENTOT);
-      st.stringend = tokenstring+LENTOT;
-      st.toklen    = LENTOT;
+      cenviron.stringend = tokenstring+LENTOT;
+      cenviron.toklen    = LENTOT;
     }
     sorig = s;
-    if (tokenstring+strlen(s) >= st.stringend) {
+    if (tokenstring+strlen(s) >= cenviron.stringend) {
       char *tt;
       TOKEN *ttt;
-      long n = st.toklen + LENTOT+strlen(s);
+      long n = cenviron.toklen + LENTOT+strlen(s);
       tt = (char *)mrealloc(&cenviron, tokenstring, n);
-      for (ttt=tokens; ttt<=st.token; ttt++) /* Adjust all previous tokens */
+      for (ttt=cenviron.tokens; ttt<=cenviron.token; ttt++) /* Adjust all previous tokens */
         ttt->str += (tt-tokenstring);
       tokenstring = tt;               /* Reset string and length */
-      st.stringend = tokenstring + (st.toklen = n);
-      printf(Str("Token length extended to %ld\n"), st.toklen);
+      cenviron.stringend = tokenstring + (cenviron.toklen = n);
+      printf(Str("Token length extended to %ld\n"), cenviron.toklen);
     }
 
-    st.token = tokens;
-    st.token->str = t = tokenstring;
+    cenviron.token = cenviron.tokens;
+    cenviron.token->str = t = tokenstring;
     open = 1;
     while ((c = *s++)) {
       if (open) {                   /* if unary possible here,   */
@@ -129,12 +112,12 @@ int express(char *s)
           if (*s == '.' || (*s >= '0' && *s <= '9'))
             *t++ = c;
           else {                    /* neg symbol: prv / illegal */
-            if (st.token > tokens
-                && *(st.token-1)->str == '/')
+            if (cenviron.token > cenviron.tokens
+                && *(cenviron.token-1)->str == '/')
               XERROR(Str("divide by unary minus"))
-            st.token->str = (char*) strminus1; st.token++;
-            st.token->str = (char*) strmult; st.token++;
-            st.token->str = t;     /* else -1 * symbol */
+            cenviron.token->str = (char*) strminus1; cenviron.token++;
+            cenviron.token->str = (char*) strmult; cenviron.token++;
+            cenviron.token->str = t;     /* else -1 * symbol */
           }
           c = *s++;                /* beg rem of token */
         }
@@ -159,35 +142,35 @@ int express(char *s)
         while (nontermin(*s))         /* if not just a termin char */
           *t++ = *s++;                /*      copy entire token    */
       *t++ = '\0';                    /* terminate this token      */
-      if (t >= st.stringend) {        /* Extend token length as required */
+      if (t >= cenviron.stringend) {        /* Extend token length as required */
         XERROR(Str("token storage LENTOT exceeded"));
       }
-      if ((st.tokend - st.token)<= 4) { /* Extend token array and friends */
-        int n = st.token - tokens;
-        tokens =
-          (TOKEN*)mrealloc(&cenviron, tokens,
-                           (toklength+TOKMAX)*sizeof(TOKEN));
-        tokenlist =
-          (TOKEN**) mrealloc(&cenviron, tokenlist,
-                             (toklength+TOKMAX)*sizeof(TOKEN*));
-        toklength += TOKMAX;
-/*         printf(Str("Tokens length extended to %d\n"), toklength); */
-        st.token  = tokens + n;
-        st.tokend = tokens + toklength;
+      if ((cenviron.tokend - cenviron.token)<= 4) { /* Extend token array and friends */
+        int n = cenviron.token - cenviron.tokens;
+        cenviron.tokens =
+          (TOKEN*)mrealloc(&cenviron, cenviron.tokens,
+                           (cenviron.toklength+TOKMAX)*sizeof(TOKEN));
+        cenviron.tokenlist =
+          (TOKEN**) mrealloc(&cenviron, cenviron.tokenlist,
+                             (cenviron.toklength+TOKMAX)*sizeof(TOKEN*));
+        cenviron.toklength += TOKMAX;
+/*         printf(Str("Tokens length extended to %d\n"), cenviron.toklength); */
+        cenviron.token  = cenviron.tokens + n;
+        cenviron.tokend = cenviron.tokens + cenviron.toklength;
       }
       /* IV - Jan 08 2003: check if the output arg of an '=' opcode is */
       /* used in the expression (only if optimisation is enabled) */
       if (opcode_is_assign == 1)
-        if (!strcmp(st.token->str, assign_outarg))      /* if yes, mark as */
+        if (!strcmp(cenviron.token->str, assign_outarg))      /* if yes, mark as */
           opcode_is_assign = 2;                         /* dangerous case  */
-      (++st.token)->str = t;                  /* & record begin of nxt one */
+      (++cenviron.token)->str = t;                  /* & record begin of nxt one */
     }
-    st.token->str = NULL;             /* expr end:  terminate tokens array */
-    if (st.token - tokens <= 1)       /*              & return if no expr  */
+    cenviron.token->str = NULL;             /* expr end:  terminate tokens array */
+    if (cenviron.token - cenviron.tokens <= 1)       /*              & return if no expr  */
       return(0);
 
-    st.token = tokens;
-    while ((s = st.token->str) != NULL) {  /* now for all tokens found, */
+    cenviron.token = cenviron.tokens;
+    while ((s = cenviron.token->str) != NULL) {  /* now for all tokens found, */
       c = *s;
       switch ((int) c) {        /* IV - Jan 15 2003 */
                                 /* assign precedence values */
@@ -215,7 +198,7 @@ int express(char *s)
       case '(':         prec = 13;      break;
       default:
         if (((c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z')) &&
-            (t = (st.token+1)->str) != NULL && *t == '(') {
+            (t = (cenviron.token+1)->str) != NULL && *t == '(') {
           prec = 12;            /* function call */
         }
         else {
@@ -227,7 +210,7 @@ int express(char *s)
         }
         break;
       }
-      (st.token++)->prec = prec;
+      (cenviron.token++)->prec = prec;
     }
     if (O.odebug) putokens();
 
@@ -239,65 +222,65 @@ int express(char *s)
 #define FCALL   12
 #define TERMS   14
 
-    st.token = tokens;
-    st.revp = tokenlist;
-    st.pushp = st.endlist = tokenlist+toklength;      /* using precedence vals, */
-    while (st.token->str != NULL) {             /*  put tokens rev pol order */
-      if (*st.token->str == '(') {
-        st.token->prec = -1;
-        *--st.pushp = st.token++;
+    cenviron.token = cenviron.tokens;
+    cenviron.revp = cenviron.tokenlist;
+    cenviron.pushp = cenviron.endlist = cenviron.tokenlist+cenviron.toklength;      /* using precedence vals, */
+    while (cenviron.token->str != NULL) {             /*  put tokens rev pol order */
+      if (*cenviron.token->str == '(') {
+        cenviron.token->prec = -1;
+        *--cenviron.pushp = cenviron.token++;
       }
-      else if (st.pushp < st.endlist && (*st.pushp)->prec >= st.token->prec) {
-        if (*st.token->str == ':' && *(*st.pushp)->str == '?')
-          *st.pushp = st.token++;               /* replace ? with : */
-        else *st.revp++ = *st.pushp++;
+      else if (cenviron.pushp < cenviron.endlist && (*cenviron.pushp)->prec >= cenviron.token->prec) {
+        if (*cenviron.token->str == ':' && *(*cenviron.pushp)->str == '?')
+          *cenviron.pushp = cenviron.token++;               /* replace ? with : */
+        else *cenviron.revp++ = *cenviron.pushp++;
       }
-      else if (*st.token->str == ')') {
-        if (st.token++ && *(*st.pushp++)->str != '(')
+      else if (*cenviron.token->str == ')') {
+        if (cenviron.token++ && *(*cenviron.pushp++)->str != '(')
           XERROR(Str("within parens"))
       }
-      else if ((st.token+1)->str!=NULL && st.token->prec < (st.token+1)->prec)
-        *--st.pushp = st.token++;
-      else *st.revp++ = st.token++;
+      else if ((cenviron.token+1)->str!=NULL && cenviron.token->prec < (cenviron.token+1)->prec)
+        *--cenviron.pushp = cenviron.token++;
+      else *cenviron.revp++ = cenviron.token++;
     }
-    while (st.pushp < st.endlist)
-      *st.revp++ = *st.pushp++;
+    while (cenviron.pushp < cenviron.endlist)
+      *cenviron.revp++ = *cenviron.pushp++;
 
-    st.endlist = st.revp;                       /* count of pol operators */
+    cenviron.endlist = cenviron.revp;                       /* count of pol operators */
     if (O.odebug) putoklist();
-    for (st.revp=tokenlist, polcnt=0;  st.revp<st.endlist; )
-      if ((*st.revp++)->prec < TERMS)           /*  is no w. prec < TERMS */
+    for (cenviron.revp=cenviron.tokenlist, polcnt=0;  cenviron.revp<cenviron.endlist; )
+      if ((*cenviron.revp++)->prec < TERMS)           /*  is no w. prec < TERMS */
         polcnt++;
     if (!polcnt) {                              /* if no real operators,  */
-      strcpy(tokenstring,tokenlist[0]->str);    /* cpy arg to beg str     */
+      strcpy(tokenstring,cenviron.tokenlist[0]->str);    /* cpy arg to beg str     */
       return(-1);                               /*  and return this info  */
     }
-    if (polcnt >= st.polmax) {
-      st.polmax = polcnt+POLMAX;
-      polish = (POLISH*) mrealloc(&cenviron, polish,st.polmax*sizeof(POLISH));
-/*       printf(Str("Extending Polish array length %ld\n"), st.polmax); */
+    if (polcnt >= cenviron.polmax) {
+      cenviron.polmax = polcnt+POLMAX;
+      polish = (POLISH*) mrealloc(&cenviron, polish,cenviron.polmax*sizeof(POLISH));
+/*       printf(Str("Extending Polish array length %ld\n"), cenviron.polmax); */
 /*      XERROR("polish storage POLMAX exceeded"); */
     }
     pp = &polish[polcnt-1];
     op = pp->opcod;
-    for (st.revp=st.argp=tokenlist; st.revp<st.endlist; ) { /* for all tokens:  */
+    for (cenviron.revp=cenviron.argp=cenviron.tokenlist; cenviron.revp<cenviron.endlist; ) { /* for all tokens:  */
       char buffer[1024];
-      if ((prec = (*st.revp)->prec) >= TERMS) {
-        *st.argp++ = *st.revp++;                     /* arg: push back    */
-        continue;                                    /*      till later   */
+      if ((prec = (*cenviron.revp)->prec) >= TERMS) {
+        *cenviron.argp++ = *cenviron.revp++;                 /* arg: push back    */
+        continue;                                /*      till later   */
       }
-      argcnt = st.argp - tokenlist;
-      if (prec == FCALL && argcnt >= 1) {            /*   function call:  */
-        pp->incount = 1;                             /*     takes one arg */
-        pp->arg[1] = copystring((*--st.argp)->str);
-        c = argtyp(pp->arg[1]);                      /* whose aki type */
+      argcnt = cenviron.argp - cenviron.tokenlist;
+      if (prec == FCALL && argcnt >= 1) {        /*   function call:  */
+        pp->incount = 1;                         /*     takes one arg */
+        pp->arg[1] = copystring((*--cenviron.argp)->str);
+        c = argtyp(pp->arg[1]);                  /* whose aki type */
         if (c == 'B' || c == 'b')
           XERROR(Str("misplaced relational op"))
         if (c != 'a' && c != 'k')
-          c = 'i';                                   /*   (simplified)  */
-        sprintf(op, "%s.%c", (*st.revp)->str, c);    /* Type at end now */
+          c = 'i';                               /*   (simplified)  */
+        sprintf(op, "%s.%c", (*cenviron.revp)->str, c); /* Type at end now */
         if (strcmp(op,"i.k") == 0) {
-          outype = 'i';                              /* i(karg) is irreg. */
+          outype = 'i';                          /* i(karg) is irreg. */
           if (pp->arg[1][0] == '#' && pp->arg[1][1] == 'k') {
             /* IV - Jan 15 2003: input arg should not be a k-rate expression */
             if (O.expr_opt) {
@@ -315,7 +298,7 @@ int express(char *s)
         else outype = c;                    /* else outype=intype */
       }
       else if (prec >= BITOPS && argcnt >= 2) { /* bit op:    */
-        if ((c = *(*st.revp)->str) == BITSET)
+        if ((c = *(*cenviron.revp)->str) == BITSET)
           strcpy(op,"or");
         else if (c == BITFLP)
           strcpy(op,"xor");
@@ -325,11 +308,11 @@ int express(char *s)
         goto common_ops;
       }
       else if (prec >= BITOPS && argcnt == 1) { /* bit op:    */
-        if ((c = *(*st.revp)->str) == '\254' || c == '~')
+        if ((c = *(*cenviron.revp)->str) == '\254' || c == '~')
           strcpy(op,"not");
         else printf(Str("Expression got lost\n"));
         pp->incount = 1;                    /*   copy 1 arg txts */
-        pp->arg[1] = copystring((*--st.argp)->str);
+        pp->arg[1] = copystring((*--cenviron.argp)->str);
         e = argtyp(pp->arg[1]);
         if (e == 'B' || e == 'b')
           XERROR(Str("misplaced relational op"))
@@ -349,10 +332,10 @@ int express(char *s)
         }
       }
       else if (prec >= AOPS && argcnt >= 2) { /* arith op:    */
-        if ((c = *(*st.revp)->str) == '+')
+        if ((c = *(*cenviron.revp)->str) == '+')
           strcpy(op,"add");
         else if (c == '-')
-          strcpy(op,"sub");               /*   create op text */
+          strcpy(op,"sub");                   /*   create op text */
         else if (c == '*')
           strcpy(op,"mul");
         else if (c == '/')
@@ -364,8 +347,8 @@ int express(char *s)
         else printf(Str("Expression got lost\n"));
       common_ops:
         pp->incount = 2;                    /*   copy 2 arg txts */
-        pp->arg[2] = copystring((*--st.argp)->str);
-        pp->arg[1] = copystring((*--st.argp)->str);
+        pp->arg[2] = copystring((*--cenviron.argp)->str);
+        pp->arg[1] = copystring((*--cenviron.argp)->str);
         e = argtyp(pp->arg[1]);
         d = argtyp(pp->arg[2]);             /*   now use argtyps */
         if (e == 'B' || e == 'b' || d == 'B' || d == 'b' )
@@ -394,12 +377,12 @@ int express(char *s)
         }
       }
       else if (prec >= RELOPS && argcnt >= 2) { /* relationals:   */
-        strcpy(op,(*st.revp)->str);            /*   copy rel op    */
+        strcpy(op,(*cenviron.revp)->str);             /*   copy rel op    */
         if (strcmp(op,"=") == 0)
           strcpy(op,"==");
         pp->incount = 2;                    /*   & 2 arg txts   */
-        pp->arg[2] = copystring((*--st.argp)->str);
-        pp->arg[1] = copystring((*--st.argp)->str);
+        pp->arg[2] = copystring((*--cenviron.argp)->str);
+        pp->arg[1] = copystring((*--cenviron.argp)->str);
         c = argtyp(pp->arg[1]);
         d = argtyp(pp->arg[2]);             /*   now use argtyps */
         if (c == 'a' || d == 'a')           /*   to determ outs  */
@@ -411,10 +394,10 @@ int express(char *s)
         else outype = 'b';
       }
       else if (prec >= LOGOPS && argcnt >= 2) { /* logicals:    */
-        strcpy(op,(*st.revp)->str);            /*   copy rel op  */
-        pp->incount = 2;                    /*   & 2 arg txts */
-        pp->arg[2] = copystring((*--st.argp)->str);
-        pp->arg[1] = copystring((*--st.argp)->str);
+        strcpy(op,(*cenviron.revp)->str);             /*   copy rel op  */
+        pp->incount = 2;                        /*   & 2 arg txts */
+        pp->arg[2] = copystring((*--cenviron.argp)->str);
+        pp->arg[1] = copystring((*--cenviron.argp)->str);
         c = argtyp(pp->arg[1]);
         d = argtyp(pp->arg[2]);             /*   now use argtyps */
         if (c == 'b' && d == 'b')           /*   to determ outs  */
@@ -427,9 +410,9 @@ int express(char *s)
       else if (prec == CONDVAL && argcnt >= 3) { /* cond vals:     */
         strcpy(op,": ");                    /*   init op as ': ' */
         pp->incount = 3;                    /*   & cpy 3 argtxts */
-        pp->arg[3] = copystring((*--st.argp)->str);
-        pp->arg[2] = copystring((*--st.argp)->str);
-        pp->arg[1] = copystring((*--st.argp)->str);
+        pp->arg[3] = copystring((*--cenviron.argp)->str);
+        pp->arg[2] = copystring((*--cenviron.argp)->str);
+        pp->arg[1] = copystring((*--cenviron.argp)->str);
         b = argtyp(pp->arg[1]);
         c = argtyp(pp->arg[2]);
         d = argtyp(pp->arg[3]);
@@ -448,14 +431,14 @@ int express(char *s)
       s = &buffer[0] /* pp->arg[0] */;      /* now create outarg acc. to type */
       if (!O.expr_opt) {
         /* IV - Jan 08 2003: old code: should work ... */
-        if (outype=='a') sprintf(s,"#a%d",st.acount++);
-        else if (outype=='k') sprintf(s,"#k%d",st.kcount++);
-        else if (outype=='B') sprintf(s,"#B%d",st.Bcount++);
-        else if (outype=='b') sprintf(s,"#b%d",st.bcount++);
-        else sprintf(s,"#i%d",st.icount++);
+        if (outype=='a') sprintf(s,"#a%d",cenviron.acount++);
+        else if (outype=='k') sprintf(s,"#k%d",cenviron.kcount++);
+        else if (outype=='B') sprintf(s,"#B%d",cenviron.Bcount++);
+        else if (outype=='b') sprintf(s,"#b%d",cenviron.bcount++);
+        else sprintf(s,"#i%d",cenviron.icount++);
       }
       else {
-        int ndx = (int) (st.argp - tokenlist);     /* argstack index */
+        int ndx = (int) (cenviron.argp - cenviron.tokenlist);     /* argstack index */
         if (opcode_is_assign == 1       &&
             (int) ndx == 0              &&
             (int) outype == assign_type &&
@@ -479,9 +462,9 @@ int express(char *s)
             cnt += argcnt_offs;         /* IV - Jan 15 2003 */
           if (outype == 'a')        sprintf(s, "#a%d", cnt);
           else if (outype == 'k')   sprintf(s, "#k%d", cnt);
-          else if (outype == 'B')   sprintf(s, "#B%d", st.Bcount++);
-          else if (outype == 'b')   sprintf(s, "#b%d", st.bcount++);
-          else                      sprintf(s, "#i%d", st.icount++);
+          else if (outype == 'B')   sprintf(s, "#B%d", cenviron.Bcount++);
+          else if (outype == 'b')   sprintf(s, "#b%d", cenviron.bcount++);
+          else                      sprintf(s, "#i%d", cenviron.icount++);
           /* IV - Jan 08 2003: count max. stack depth in order to allow */
           /* generating different indexes for temporary variables of */
           /* separate expressions on the same line (see also below). */
@@ -489,11 +472,11 @@ int express(char *s)
           if (ndx > argcnt_max) argcnt_max = ndx;
         }
       }
-      (*st.argp++)->str = pp->arg[0] = copystring(s);/* & point argstack there */
-      st.revp++;
+      (*cenviron.argp++)->str = pp->arg[0] = copystring(s);/* & point argstack there */
+      cenviron.revp++;
       pp--;   op = pp->opcod;                     /* prep for nxt pol */
     }
-    if (st.argp - tokenlist == 1) {
+    if (cenviron.argp - cenviron.tokenlist == 1) {
       /* IV - Jan 08 2003: do not re-use temporary variables between */
       /* expressions of the same line */
       argcnt_offs += (argcnt_max + 1);
@@ -502,10 +485,10 @@ int express(char *s)
           (int) outype == assign_type   &&
           strchr("aki", assign_type) != NULL) {
         /* replace outarg if necessary */
-        if (strcmp(tokenlist[0]->str, assign_outarg)) {
+        if (strcmp(cenviron.tokenlist[0]->str, assign_outarg)) {
           /* now the last op will use the output of '=' directly */
           /* the pp + 1 is because of the last pp-- */
-          tokenlist[0]->str = (pp + 1)->arg[0] = copystring(assign_outarg);
+          cenviron.tokenlist[0]->str = (pp + 1)->arg[0] = copystring(assign_outarg);
         }
         /* mark as optimised away */
         opcode_is_assign = -1;
@@ -516,7 +499,7 @@ int express(char *s)
 
  error:
     synterr(Str("expression syntax"));    /* or gracefully report error*/
-    printf(" %s: %s\n",st.xprmsg,sorig);
+    printf(" %s: %s\n",cenviron.xprmsg,sorig);
     strcpy(tokenstring,"1");
     return(-1);
 }
@@ -552,7 +535,7 @@ static int nontermin(int c)
 
 static void putokens(void)      /* for debugging check only */
 {
-    TOKEN       *tp = tokens;
+    TOKEN       *tp = cenviron.tokens;
     while (tp->str != NULL)
       printf("%s\t", (tp++)->str);
     printf("\n");
@@ -560,8 +543,8 @@ static void putokens(void)      /* for debugging check only */
 
 static void putoklist(void)     /*      ditto           */
 {
-    TOKEN       **tpp = tokenlist;
-    while (tpp < st.endlist)
+    TOKEN       **tpp = cenviron.tokenlist;
+    while (tpp < cenviron.endlist)
       printf("%s\t", (*tpp++)->str);
     printf("\n");
 }
